@@ -1,20 +1,20 @@
 package it.gov.pagopa.pu.debtpositions.mapper;
 
+import it.gov.pagopa.pu.debtpositions.dto.BaseInstallment;
 import it.gov.pagopa.pu.debtpositions.dto.DebtorDebtPositionDTO;
+import it.gov.pagopa.pu.debtpositions.dto.generated.InstallmentStatus;
 import it.gov.pagopa.pu.debtpositions.model.DebtPosition;
 import it.gov.pagopa.pu.debtpositions.model.DebtPositionTypeOrg;
 import it.gov.pagopa.pu.debtpositions.model.InstallmentNoPII;
 import it.gov.pagopa.pu.debtpositions.model.PaymentOption;
+import it.gov.pagopa.pu.debtpositions.util.InstallmentUtils;
 import it.gov.pagopa.pu.debtpositions.util.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.mapstruct.factory.Mappers;
 import uk.co.jemos.podam.api.PodamFactory;
 
 import java.time.LocalDate;
-import java.util.Comparator;
-import java.util.List;
-import java.util.SortedSet;
-import java.util.TreeSet;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,55 +25,61 @@ class DebtorDebtPositionMapperTest {
   private final PodamFactory podam = TestUtils.getPodamFactory();
 
   @Test
-  void givenValidDebtPositionAndTypeOrgWhenMapThenReturnDTO() {
-    // given
-    DebtPosition debtPosition = podam.manufacturePojo(DebtPosition.class);
-    debtPosition.setDebtPositionId(100L);
-    debtPosition.setDescription("DEBT_POS_DESC");
-
-    DebtPositionTypeOrg typeOrg = new DebtPositionTypeOrg();
-    typeOrg.setDescription("TYPE_ORG_DESCRIPTION");
-
-    // when
-    DebtorDebtPositionDTO result = mapper.map(debtPosition, typeOrg);
-
-    // then
-    assertNotNull(result);
-    assertEquals(100L, result.getDebtPositionId());
-    assertEquals("DEBT_POS_DESC", result.getDebtPositionDescription());
-    assertEquals("TYPE_ORG_DESCRIPTION", result.getDebtPositionTypeOrgDescription());
-    assertEquals(debtPosition.getStatus(), result.getStatus());
-    assertEquals(debtPosition.getDebtPositionOrigin(), result.getDebtPositionOrigin());
-    assertEquals(debtPosition.getOrganizationId(), result.getOrganizationId());
-
-    TestUtils.checkNotNullFields(result);
-  }
-
-  @Test
   void givenDebtPositionWithPaymentOptionsWhenMapThenPaymentOptionsAreMapped() {
     // given
-    DebtPosition debtPosition = podam.manufacturePojo(DebtPosition.class);
-    PaymentOption po1 = podam.manufacturePojo(PaymentOption.class);
-    PaymentOption po2 = podam.manufacturePojo(PaymentOption.class);
+    DebtPosition dp = podam.manufacturePojo(DebtPosition.class);
+
+    PaymentOption po1 = new PaymentOption();
+    po1.setPaymentOptionId(1L);
+    InstallmentNoPII i1 = new InstallmentNoPII();
+    i1.setInstallmentId(1L);
+    i1.setStatus(InstallmentUtils.UNPAID_OR_PAID_INSTALLMENT_STATUSES.iterator().next());
+    i1.setDueDate(LocalDate.of(2025, 1, 1));
+
+    InstallmentNoPII i2 = new InstallmentNoPII();
+    i2.setInstallmentId(2L);
+    i2.setStatus(InstallmentStatus.INVALID);
+    i2.setDueDate(LocalDate.of(2025, 2, 1));
+
+    po1.setInstallments(new TreeSet<>(Set.of(i1, i2)));
+
+    PaymentOption po2 = new PaymentOption();
+    po2.setPaymentOptionId(2L);
+    InstallmentNoPII i3 = new InstallmentNoPII();
+    i3.setInstallmentId(3L);
+    i3.setStatus(InstallmentStatus.INVALID);
+    i3.setDueDate(LocalDate.of(2025, 3, 1));
+    po2.setInstallments(new TreeSet<>(Set.of(i3)));
 
     SortedSet<PaymentOption> options = new TreeSet<>(Comparator.comparing(PaymentOption::getPaymentOptionId));
     options.add(po1);
     options.add(po2);
 
-    debtPosition.setPaymentOptions(options);
+    dp.setPaymentOptions(options);
 
     DebtPositionTypeOrg typeOrg = new DebtPositionTypeOrg();
     typeOrg.setDescription("TYPE_ORG_DESC");
 
     // when
-    DebtorDebtPositionDTO result = mapper.map(debtPosition, typeOrg);
+    DebtorDebtPositionDTO result = mapper.map(dp, typeOrg);
 
     // then
     assertNotNull(result.getPaymentOptions());
-    assertEquals(2, result.getPaymentOptions().size());
+
+    assertEquals(1, result.getPaymentOptions().size());
+
+    List<? extends BaseInstallment> sortedInstallments = result.getPaymentOptions()
+      .getFirst()
+      .getInstallments()
+      .stream()
+      .toList();
+
+    assertEquals(1, sortedInstallments.size());
+    assertEquals(i1.getInstallmentId(), sortedInstallments.getFirst().getInstallmentId());
 
     TestUtils.checkNotNullFields(result);
   }
+
 
   @Test
   void givenInstallmentsUnsortedWhenMapThenInstallmentsAreSortedByDueDate() {
@@ -83,21 +89,23 @@ class DebtorDebtPositionMapperTest {
     DebtPositionTypeOrg typeOrg = new DebtPositionTypeOrg();
     typeOrg.setDescription("TYPE_ORG_DESC");
 
-
     PaymentOption po = new PaymentOption();
     po.setPaymentOptionId(1L);
 
     InstallmentNoPII i1 = new InstallmentNoPII();
     i1.setInstallmentId(3L);
     i1.setDueDate(LocalDate.of(2025, 5, 10));
+    i1.setStatus(InstallmentUtils.UNPAID_OR_PAID_INSTALLMENT_STATUSES.iterator().next());
 
     InstallmentNoPII i2 = new InstallmentNoPII();
     i2.setInstallmentId(4L);
     i2.setDueDate(LocalDate.of(2025, 1, 10));
+    i2.setStatus(InstallmentUtils.UNPAID_OR_PAID_INSTALLMENT_STATUSES.iterator().next());
 
     InstallmentNoPII i3 = new InstallmentNoPII();
     i3.setInstallmentId(5L);
     i3.setDueDate(LocalDate.of(2025, 3, 10));
+    i3.setStatus(InstallmentUtils.UNPAID_OR_PAID_INSTALLMENT_STATUSES.iterator().next());
 
     SortedSet<InstallmentNoPII> unsorted = new TreeSet<>(Comparator.comparing(InstallmentNoPII::getInstallmentId));
     unsorted.add(i1);
@@ -114,12 +122,15 @@ class DebtorDebtPositionMapperTest {
     DebtorDebtPositionDTO result = mapper.map(dp, typeOrg);
 
     // then
-    List<?> installments = result.getPaymentOptions().getFirst().getInstallments().stream().toList();
+    List<? extends BaseInstallment> sortedInstallments = result.getPaymentOptions()
+      .getFirst()
+      .getInstallments()
+      .stream()
+      .toList();
 
-    assertEquals(LocalDate.of(2025, 1, 10), ((InstallmentNoPII) installments.getFirst()).getDueDate());
-    assertEquals(LocalDate.of(2025, 3, 10), ((InstallmentNoPII) installments.get(1)).getDueDate());
-    assertEquals(LocalDate.of(2025, 5, 10), ((InstallmentNoPII) installments.get(2)).getDueDate());
-    TestUtils.checkNotNullFields(result);
+    assertEquals(LocalDate.of(2025, 1, 10), sortedInstallments.get(0).getDueDate());
+    assertEquals(LocalDate.of(2025, 3, 10), sortedInstallments.get(1).getDueDate());
+    assertEquals(LocalDate.of(2025, 5, 10), sortedInstallments.get(2).getDueDate());
   }
 
   @Test
